2010-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/AbstractBaseViewContent.cs: ViewContent
	  widgets are now destroyed by the workspace window.

2010-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Manually call
	  'box.Destroy ()' (work around for the IntPtr bug).

2010-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components.Commands/CommandManager.cs: Try to
	  fix an IntPtr exception caused by accessing a invalid
	  FocusChild.

2010-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/DocumentNavigationPoint.cs:
	* MonoDevelop.Ide.Gui/NavigationHistoryService.cs: found
	  better fix for 'Bug 600657 - "Show Previous Warning/Error"
	  fails when there are warnings without file offsets'.

2010-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/DocumentNavigationPoint.cs: Fixed 'Bug
	  600657 - "Show Previous Warning/Error" fails when there are
	  warnings without file offsets'.

2010-04-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Desktop/PlatformService.cs: Track API, build
	  build.

2010-04-28  Lluis Sanchez Gual  <lluis@novell.com>

	* BuildVariables.cs: Require Mono 2.6.1. Updated version
	  label.

2010-04-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide\IdeStartup.cs: Add missing unchecked block.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWidget.cs:
	* MonoDevelop.Ide.CodeCompletion/ListWindow.cs: Optimized
	  performance a bit.

2010-04-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs: Don't
	  use FontDesc to change the font of the text renderer, since
	  it overrides the font weight specified using markup. Fixes
	  bug #595975 - Start project is no longer highlighted.

2010-04-28  Mike Krüger  <mkrueger@novell.com>
